# fyaml-rust-cli

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  fyaml-spec.md
.circleci/: config.yml
.github/workflows/: ci.yml
src/: app.rs  cli.rs  config.rs  diagnostics.rs  engine.rs  lib.rs  main.rs  scaffold.rs  serializer.rs
tests/: cli_integration.rs
