[package]
name = "fyaml"
version = "0.1.0"
edition = "2021"
description = "FYAML: filesystem-backed YAML packer"
license = "MIT"
repository = "https://github.com/example/fyaml"
readme = "README.md"
rust-version = "1.75"

[lib]
name = "fyaml"
path = "src/lib.rs"

[[bin]]
name = "fyaml"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.12"
